--- a/index.html
+++ b/index.html
@@ -10,10 +10,20 @@
 </head>
 <body>
     <div id="header">
-        <h2>Tic-Tac-Toe</h2>
-        <button id="start">Start Game</button>
+        <h1>Tic-Tac-Toe</h1>
+        <!-- <button id="start">Start Game</button> -->
     </div>
-    <div id="main"></div>
-    
+    <div id="boardgame">
+        <button class="grid-item"></button>
+        <button class="grid-item"></button>
+        <button class="grid-item"></button>
+        <button class="grid-item"></button>
+        <button class="grid-item"></button>
+        <button class="grid-item"></button>
+        <button class="grid-item"></button>
+        <button class="grid-item"></button>
+        <button class="grid-item"></button>
+    </div>
+        <button id="reset">Reset</button>
 </body>
 </html>
