added a div for DOM manipulation

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         <button class="grid-item"></button>
         <button class="grid-item"></button>
     </div>
-        <button id="reset">Reset</button>
+    <div class="wins"></div>
+    <button id="reset">Reset</button>
 </body>
 </html>
